# fpm-py

./: .gitignore  LICENSE  README.md  main.py  mdata_recover.py  pyproject.toml
.github/workflows/: publish.yml
experiments/: forward_try.py  recover_torch.py  recover_try.py  test.py  test_center_region.py  test_ideal_lowpass.py  test_optim.py
src/fpm_py/: __init__.py
src/fpm_py/analysis/: metrics.py
src/fpm_py/core/: __init__.py  backward.py  forward.py  structs.py
src/fpm_py/utils/: __init__.py  data_utils.py  math_utils.py
src/ptych/: __init__.py  analysis.py  experimental.py  forward.py  inverse.py  train.py  utils.py
