[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpm-py"
version = "2.0.0"
description = "Fourier ptychography tooling for simulation and reconstruction"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
    {name = "Robin Cunningham", email = "rspcunningham@gmail.com"},
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fpm_py"]

[tool.basedpyright]
reportMissingTypeStubs = false
reportUnknownParameterType = "error"
reportUnknownMemberType = false

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
]
