[project]
name = "ptych"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
    {name = "Robin Cunningham", email = "rspcunningham@gmail.com"},
    {name = "Sammy Farnum", email = "sfarnumm1132@gmail.com"}
]
dependencies = []

[tool.basedpyright]
reportMissingTypeStubs = false
