[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptych"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
    {name = "Robin Cunningham", email = "rspcunningham@gmail.com"},
    {name = "Sammy Farnum", email = "sfarnumm1132@gmail.com"}
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ptych"]

[tool.basedpyright]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnusedCallResult = false

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
]
